2003-09-08  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/script.cpp:  Corrected use of
	auto_ptr<>::release.

2003-09-08  Braden McDaniel  <braden@endoframe.com>

	Require Automake 1.6.3.

	* configure.ac
	* Makefile.am

2003-09-08  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Modernize usage of AC_OUTPUT; use
	AC_CONFIG_FILES.
	* Makefile.am:  Require Automake 1.7.

2003-09-02  Braden McDaniel  <braden@endoframe.com>

	* configure.ac:  Provide help text for DOXYGEN variable.

2003-09-02  Braden McDaniel  <braden@endoframe.com>

	Fixes for gcc 3.2.2.

	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/vrml97node.cpp
	* src/libopenvrml/openvrml/vrml97node.h

2003-09-01  Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/doc.cpp (doc2::filename):  Fixed
	problem resolving file URLs on Windows.

2003-09-01  Braden McDaniel  <braden@endoframe.com>

	Quelled some stupid warnings in Release builds.

	* ide-projects/Windows/VisualC7/OpenVRML/lookat/lookat.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml/openvrml.vcproj
	* ide-projects/Windows/VisualC7/OpenVRML/openvrml-gl/openvrml-gl.vcproj

2003-09-01  Braden McDaniel  <braden@endoframe.com>

	Fixed a bunch of warnings from cl 13.00.9466.

	* src/libopenvrml/openvrml/Vrml97Parser.cpp
	* src/libopenvrml/openvrml/Vrml97Parser.g
	* src/libopenvrml/openvrml/basetypes.cpp
	* src/libopenvrml/openvrml/basetypes.h
	* src/libopenvrml/openvrml/bounding_volume.cpp
	* src/libopenvrml/openvrml/browser.cpp
	* src/libopenvrml/openvrml/field.cpp
	* src/libopenvrml/openvrml/field_value_ptr.cpp
	* src/libopenvrml/openvrml/frustum.cpp
	* src/libopenvrml/openvrml/img.cpp
	* src/libopenvrml/openvrml/node_class_ptr.cpp
	* src/libopenvrml/openvrml/node_type_ptr.cpp
	* src/libopenvrml/openvrml/scope_ptr.cpp
	* src/libopenvrml/openvrml/system.cpp
	* src/libopenvrml/openvrml/viewer.cpp
	* src/libopenvrml/openvrml/viewer.h
	* src/libopenvrml/openvrml/vrml97node.cpp