@@ -635,7 +635,7 @@ abstract_geometry_node::~abstract_geometry_node() throw ()
  * @param context the renderer context
  */
 void abstract_geometry_node::render(openvrml::viewer & viewer,
-                              rendering_context context)
+                                    rendering_context context)
 {
     if (this->viewerObject && this->modified()) {
         viewer.remove_object(this->viewerObject);
@@ -714,7 +714,7 @@ abstract_indexed_set_node::~abstract_indexed_set_node() throw ()
  */
 bool abstract_indexed_set_node::modified() const
 {
-    return (this->modified()
+    return (this->node::modified()
             || (this->color_.value && this->color_.value->modified())
             || (this->coord.value && this->coord.value->modified()));
 }
@@ -1526,7 +1526,7 @@ void appearance_node::process_set_textureTransform(const field_value & value,
  */
 bool appearance_node::modified() const
 {
-    return (this->modified()
+    return (this->node::modified()
           || (this->material_.value && this->material_.value->modified())
           || (this->texture_.value && this->texture_.value->modified())
           || (this->textureTransform.value
@@ -5524,7 +5524,7 @@ elevation_grid_node::~elevation_grid_node() throw ()
  */
 bool elevation_grid_node::modified() const
 {
-    return (this->modified()
+    return (this->node::modified()
             || (this->color.value && this->color.value->modified())
             || (this->normal.value && this->normal.value->modified())
             || (this->texCoord.value && this->texCoord.value->modified()));
@@ -7003,7 +7003,7 @@ void group_node::process_set_children(const field_value & value,
  */
 bool group_node::modified() const
 {
-    if (this->modified()) { return true; }
+    if (this->node::modified()) { return true; }
     for (size_t i = 0; i < this->children_.value.size(); ++i) {
         if (this->children_.value[i]->modified()) { return true; }
     }
@@ -7045,7 +7045,8 @@ void group_node::render(openvrml::viewer & viewer, rendering_context context)
  * because children will already have done the culling, we don't need
  * to repeat it here.
  */
-void group_node::render_nocull(openvrml::viewer & viewer, rendering_context context)
+void group_node::render_nocull(openvrml::viewer & viewer,
+                               rendering_context context)
 {
     using std::vector;
 
@@ -7724,7 +7725,7 @@ indexed_face_set_node::~indexed_face_set_node() throw () {}
  *      @c false otherwise.
  */
 bool indexed_face_set_node::modified() const {
-    return (this->modified()
+    return (this->node::modified()
             || (this->color_.value && this->color_.value->modified())
             || (this->coord.value && this->coord.value->modified())
             || (this->normal.value && this->normal.value->modified())
@@ -8505,7 +8506,7 @@ lod_node::~lod_node() throw ()
  */
 bool lod_node::modified() const
 {
-    if (this->modified()) { return true; }
+    if (this->node::modified()) { return true; }
 
     // This should really check which range is being rendered...
     for (size_t i = 0; i < this->level.value.size(); ++i) {
@@ -14233,7 +14234,7 @@ switch_node::~switch_node() throw () {}
  *      @c false otherwise.
  */
 bool switch_node::modified() const {
-    if (this->modified()) { return true; }
+    if (this->node::modified()) { return true; }
 
     long w = this->whichChoice.value;
 
