@@ -1,5 +1,10 @@
 2003-09-08  Braden McDaniel  <braden@endoframe.com>
 
+	* src/libopenvrml/openvrml/vrml97node.cpp:  Fixed recursive
+	calls to {Node}::modify.
+
+2003-09-08  Braden McDaniel  <braden@endoframe.com>
+
 	* src/libopenvrml/openvrml/script.cpp:  Corrected use of
 	auto_ptr<>::release.
 
